# flanks-challenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-crawler  Dockerfile-tests  README.md  docker-compose.yml  docker-compose_crawler.yml  pyproject.toml
src/: config.py  local_testing.py  run_cnmv_crawler.py  service.py
src/crawler/: __init__.py  cnmv.py  pipelines.py
src/data_classes/: __init__.py  data_models.py
src/handlers/: __init__.py  info_handler.py  search_handler.py  utils.py
src/mongo/: __init__.py  mongo_client_base.py  mongo_conn.py  mongo_data.py
tests/: __init__.py  conftest.py  test_utils.py
tests/crawler/: cnmv_test.py  conftest.py  pipelines_test.py
tests/mongo/: __init__.py  mongo_data_test.py
tests/test_sample_data/: entry1.html  entry1_missing_isin.html  entry1_missing_key.html  entry1_missing_non_key.html  entry1_no_span.html  entry1_no_tablaDatos.html  entry1_no_titcont.html  entry2.html  list_page.html  list_page_empty.html  list_page_empty_urls_list.html  list_page_no_current_page.html  list_page_no_next_page.html  list_page_no_pagination.html  list_page_no_urls_list.html
