[tool.poetry]
name = "flanks-challenge"
version = "0.1.0"
description = "Python dependencies for the project"
authors = ["Jose Fonceca <ilbertofjunior@gmail.com>"]
readme = "README.md"
packages = [{include = "flanks_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
