[tool.poetry]
name = "flanks-challenge"
version = "0.1.0"
description = "Python dependencies for the project"
authors = ["Jose Fonceca <ilbertofjunior@gmail.com>"]
readme = "README.md"
packages = [{ include = "flanks_challenge" }]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.3.0"
aiohttp = "^3.8.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.lint.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
mypy = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
commitizen = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
follow_imports_silent = true
show_column_numbers = true
strict = true
