[tool.poetry]
name = "flanks-challenge"
version = "0.1.0"
description = "Python dependencies for the project"
authors = ["Jose Fonceca <ilbertofjunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.3.0"
aiohttp = "^3.8.5"
beautifulsoup4 = "^4.12.2"
types-beautifulsoup4 = "^4.12.0.6"

[tool.poetry.group.service]
optional = true

[tool.poetry.group.service.dependencies]
sanic = "^23.6.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"
commitizen = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
preview = true

[tool.pylint.SIMILARITIES]
min-similarity-lines = 10

[tool.isort]
line_length = 80
profile = "black"

[tool.mypy]
enable_incomplete_feature = "Unpack"
show_column_numbers = true
strict = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = ["pyproject.toml:version", "__version__.py"]
